# ic-macros

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_8md.html  assert__constant_8h.html  assert__constant_8h.js  assert__constant_8h__dep__incl.map  assert__constant_8h__dep__incl.md5  assert__constant_8h_source.html  assert__type_8h.html  assert__type_8h.js  assert__type_8h__dep__incl.map  assert__type_8h__dep__incl.md5  assert__type_8h_source.html  build__assert_8h.html  build__assert_8h.js  build__assert_8h__dep__incl.map  build__assert_8h__dep__incl.md5  build__assert_8h_source.html  dir_000000_000001.html  dir_000001_000002.html  dir_000002_000001.html  dir_6cbb653dcd0745b39bd039f02ad5bff5.html  dir_6cbb653dcd0745b39bd039f02ad5bff5.js  dir_6cbb653dcd0745b39bd039f02ad5bff5_dep.map  dir_6cbb653dcd0745b39bd039f02ad5bff5_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  dir_e00f5880a4de2a58fa241345e6f40588.html  dir_e00f5880a4de2a58fa241345e6f40588.js  dir_e00f5880a4de2a58fa241345e6f40588_dep.map  dir_e00f5880a4de2a58fa241345e6f40588_dep.md5  enum__cast_8h.html  enum__cast_8h.js  enum__cast_8h__dep__incl.map  enum__cast_8h__dep__incl.md5  enum__cast_8h_source.html  (+35 more)
.githooks/: pre-commit
.github/workflows/: lint.yaml  release.yaml  test.yaml
docs/: Doxyfile  README.md  package-lock.json  package.json
include/: ic_macros.h
include/ic_macros/: assert_constant.h  assert_type.h  enum_cast.h  ic_assert.h  integer_cast.h  pragma_message.h
include/zephyr/: build_assert.h  util.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_6.js  pages_0.js  searchdata.js
tests/: CMakeLists.txt  helpers.h  test_assert_constant.c  test_assert_type.c  test_integer_cast.c  test_math.c
toolchain/: aarch64-linux-gnu-gcc.cmake  arm-none-eabi-gcc.cmake  arm-zephyr-eabi-gcc.cmake
